# log-harvestor-py

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: deploy-prod.yaml  deploy-stage.yaml  publish.yaml
forwarder/: __init__.py  config.cfg  logger.py
logger/: __init__.py  config.cfg  log.py  logger.py
logharvestor/: __init__.py  forwarder.py
tests/: forwarder_test.py  logger_test.py
