[metadata]
name = log-harvestor-py
version = 0.0.7
author = Solomon Bush
author_email = solomon@logharvestor.com
description = Python integration package for LogHarvestor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/solomon-bush/log-harvestor-py
project_urls =
    Bug Tracker = https://github.com/solomon-bush/log-harvestor-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = logharvestor
packages = find:
python_requires = >=3.6

[options.packages.find]
where = logharvestor